# use-diagnostic

./: CHANGELOG.md  Cargo.toml  Makefile  README.md  release-plz.toml
.devcontainer/: devcontainer.json
.github/workflows/: facade-publish-readiness.yml  publish-readiness.yml  release-plz-release.yml  sbom.yml
crates/use-diagnostic/: Cargo.toml  README.md
crates/use-diagnostic-code/: Cargo.toml  README.md
crates/use-diagnostic-code/src/: lib.rs
crates/use-diagnostic-label/: Cargo.toml  README.md
crates/use-diagnostic-label/src/: lib.rs
crates/use-diagnostic-level/: Cargo.toml  README.md
crates/use-diagnostic-level/src/: lib.rs
crates/use-diagnostic-message/: Cargo.toml  README.md
crates/use-diagnostic-message/src/: lib.rs
crates/use-diagnostic-report/: Cargo.toml  README.md
crates/use-diagnostic-report/src/: lib.rs
crates/use-diagnostic-span/: Cargo.toml  README.md
crates/use-diagnostic-span/src/: lib.rs
crates/use-diagnostic/src/: lib.rs  prelude.rs
