[package]
name = "use-diagnostic-message"
description = "Plain-text diagnostic message primitives for RustUse"
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-diagnostic-message"
keywords = ["diagnostic", "message", "note", "text", "rustuse"]
categories = ["development-tools", "data-structures"]

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true