[package]
name = "use-diagnostic-report"
description = "Simple diagnostic and diagnostic report primitives for RustUse"
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-diagnostic-report"
keywords = ["diagnostic", "report", "severity", "message", "rustuse"]
categories = ["development-tools", "data-structures"]

[dependencies]
use-diagnostic-code.workspace = true
use-diagnostic-label.workspace = true
use-diagnostic-level.workspace = true
use-diagnostic-message.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
