[package]
name = "use-diagnostic"
description = "Facade crate for RustUse diagnostic primitives"
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-diagnostic"
keywords = ["diagnostic", "report", "warning", "error", "rustuse"]
categories = ["development-tools", "data-structures"]

[dependencies]
use-diagnostic-code.workspace = true
use-diagnostic-label.workspace = true
use-diagnostic-level.workspace = true
use-diagnostic-message.workspace = true
use-diagnostic-report.workspace = true
use-diagnostic-span.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
